# vibe-remote

./: .dockerignore  .env.e2e.example  .env.example  .env.regression.example  .env.three-regression.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OPTIMIZATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  E2E_TEST_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_TUTORIAL.md  README.md  README_ZH.md  REFACTOR_PLAN.md  SECURITY.md  TELEGRAM_TOPICS_SUPPORT.md  TEST_CHECKLIST.md  VISION.md  VISION_ZH.md  agent_routes.example.yaml  agent_routes.yaml  docker-compose.e2e-integration.yml  docker-compose.e2e.yml  docker-compose.three-regression.yml  get_chat_id.py  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  test_topic_commands.py  test_topics_support.py  vibe_screenshot_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
config/: __init__.py  discovered_chats.py  paths.py  platform_registry.py  settings.py  v2_compat.py  v2_config.py  v2_sessions.py  v2_settings.py
core/: agent_auth_service.py  audio_asr.py  auth.py  avibe_cloud.py  chat_discovery.py  controller.py  inbox_events.py  internal_server.py  message_dispatcher.py  message_mirror.py  modals.py  process_diagnostics.py  process_isolation.py  processing_indicator.py  reply_enhancer.py  runtime_commands.py  scheduled_tasks.py  session_titles.py  session_turns.py  show_pages.py  show_runtime.py  show_session_events.py  system_prompt_injection.py  update_checker.py  vibe_agents.py  (+4 more)
packaging/vibe-remote-shim/: README.md  pyproject.toml
packaging/vibe-remote-shim/vibe_remote_shim/: __init__.py
(+743 files in other folders)
