[project]
name = "vibe-remote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "anyio>=4.0.0",
    "claude-code-sdk>=0.0.19",
    "markdown-to-mrkdwn>=0.2.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "slack-sdk>=3.26.0",
    "telegramify-markdown>=0.5.0",
    "typing-extensions>=4.12.2",
]
